# confounding-robust-inference

./: .buildinfo  .gitattributes  .gitignore  Makefile  README.md  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: docs.yaml  format.yaml  test.yaml
_modules/: index.html
_modules/confounding_robust_inference/: data.html  policies.html
_modules/confounding_robust_inference/estimators/: base.html  baselines.html  kcmc.html  ncmc.html
_modules/confounding_robust_inference/utils/: propensity.html  quantile_regression.html  types.html
_sources/: installation.rst.txt
_sources/api_reference/: estimators.rst.txt  index.rst.txt  utils.rst.txt
_sources/examples/: bound_tightness.nblink.txt  hypothesis_testing.nblink.txt  model_selection.nblink.txt
api_reference/: data.html  estimators.html  index.html  policies.html  utils.html
confounding_robust_inference/: __init__.py  data.py  policies.py
confounding_robust_inference/estimators/: __init__.py  base.py  baselines.py  constraints.py  kcmc.py  misc.py  ncmc.py
confounding_robust_inference/utils/: docs.py  propensity.py  quantile_regression.py
cri/: data.py  policies.py
cri/data/: __init__.py
cri/estimators/: __init__.py  _base.py  base.py  baselines.py  constraints.py  kcmc.py  kernel.py  misc.py  ncmc.py
cri/utils/: propensity.py  quantile_regression.py  quantile_regressor.py  types.py
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  license.rst
docs/source/api_reference/: data.rst  estimators.rst  index.rst  policies.rst  utils.rst
docs/source/examples/: ate.nblink  basic.nblink  continuous_treatment.nblink  differentiable_policy_learning.nblink  index.rst  list_constraints.nblink  list_estimators.nblink  mixed_policy_learning.nblink  nls_data.nblink  rank_selection.nblink  test_ate.nblink  test_mixed_policy.nblink  visualize_sharpness.nblink
examples/: ate.html  ate.ipynb  basic.html  basic.ipynb  bound_tightness.html  bound_tightness.ipynb  continuous_treatment.html  continuous_treatment.ipynb  differentiable_policy_learning.html  differentiable_policy_learning.ipynb  hypothesis_testing.html  hypothesis_testing.ipynb  index.html  list_constraints.html  list_constraints.ipynb  list_estimators.html  list_estimators.ipynb  mixed_policy_learning.html  mixed_policy_learning.ipynb  model_selection.html  model_selection.ipynb  nls_data.html  nls_data.ipynb  rank_selection.ipynb  test_ate.ipynb  test_mixed_policy.ipynb  visualize_sharpness.ipynb
examples/notebooks/: Experiment_Policy_Evaluation_Dual_NN.ipynb  Experiment_Policy_Evaluation_Information_Criterion.ipynb  Experiment_Policy_Evaluation_f_Divergence.py  Experiment_Policy_Learning.ipynb  Kernelized Confounding Robust Poilcy Improvement KL constraint.ipynb  Kernelized Confounding Robust Poilcy Improvement quantile constraint.ipynb  Kernelized Confounding Robust Poilcy Improvement reciprocal constraints.ipynb  Kernelized Confounding Robust Poilcy Improvement.ipynb  Optiver Puzzle.ipynb  design_docs.ipynb  quantile-regression.ipynb
kcmc/: .estimators.py.swp  data.py  data_binary.py  data_continuous.py  data_real.py  dual_estimators.py  estimators.py  experiment_policy_evaluation.py  fast_quantile_regressor.py
notebooks/: '  Experiment_Policy_Evaluation.ipynb  Experiment_Policy_Evaluation_Dual_NN.ipynb  Experiment_Policy_Evaluation_Information_Criterion.ipynb  Experiment_Policy_Evaluation_f_Divergence.ipynb  Experiment_Policy_Evaluation_f_Divergence.py  Experiment_Policy_Learning.ipynb  Experiment_Policy_Learning_Consistency.ipynb  Kernelized Confounding Robust Poilcy Improvement (variance refinement).ipynb  Kernelized Confounding Robust Poilcy Improvement KL constraint.ipynb  Kernelized Confounding Robust Poilcy Improvement Thesis Version.ipynb  Kernelized Confounding Robust Poilcy Improvement continuous treatment.ipynb  Kernelized Confounding Robust Poilcy Improvement low-rank hard constraint and 10K data.ipynb  Kernelized Confounding Robust Poilcy Improvement quantile constraint.ipynb  Kernelized Confounding Robust Poilcy Improvement reciprocal constraints.ipynb  Kernelized Confounding Robust Poilcy Improvement.ipynb  design_docs.ipynb  multiobjective-confounding-robust-policy-improvement.ipynb  quantile-regression.ipynb  sample.csv  setup.py  tmp.py
notebooks/logs/: toy_experiments_log.csv
tests/: test_data.py  test_estimators.py  test_estimators_misc.py  test_nothing.py  test_policy.py  test_utils_propensity.py  test_utils_quantile_regressor.py
