[build-system]
requires = ["setuptools >= 61.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cri"]

[project]
name = "CRI"
description = "Confounding robust inference with conditional moment constraints"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kei Ishikawa"},
    {email = "k.stoneriv@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.3.0",
    "numpy>=1.24.1",
    "scikit-learn>=1.2.1",
    "scipy>=1.10.0",
    "statsmodels>=0.13.5",
    "torch>=1.13.1",
]
dynamic = ["version"]

[project.optional-dependencies]
example = [
    "pandas", 
    "tqdm",
    "matplotlib",
]
dev = [
    "tox",
    "isort",
    "black[jupyter]",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
]

[tool.setuptools.dynamic]
version = {attr = "cri.version.__version__"}

[tool.black]
line-length = 120
target-version = ["py310"]
src_paths = ["cri", "tests", "examples"]
 
[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
exclude = ["docs"]

[tool.mypy]
files = ["cri", "tests"]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
no_implicit_reexport = true

ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
