[build-system]
requires = ["setuptools >= 61.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["confounding_robust_inference*"]

[project]
name = "confounding-robust-inference"
description = "Confounding robust inference with conditional moment constraints"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kei Ishikawa"},
    {email = "k.stoneriv@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.3.0",
    "Mosek>=10.0.0",
    "numpy>=1.24.1",
    "pandas>=1.5.2", 
    "scikit-learn>=1.2.1",
    "scipy>=1.10.0",
    "statsmodels>=0.13.5",
    "torch>=2.0.0",
    "pytorch-minimize>=0.0.2",
]
dynamic = ["version"]

[project.optional-dependencies]
example = [
    "pandas", 
    "tqdm",
    "matplotlib",
]
dev = [
    "tox",
    "isort",
    "black[jupyter]",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "nbsphinx",
    "nbsphinx-link",
]

[tool.setuptools.dynamic]
version = {attr = "confounding_robust_inference.version.__version__"}

[tool.black]
line-length = 100
target-version = ["py310"]
src_paths = ["confounding_robust_inference", "tests", "examples"]
 
[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
exclude = ["docs"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]



[tool.mypy]
files = ["confounding_robust_inference", "tests"]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
no_implicit_reexport = true

ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
    "confounding_robust_inference.estimators.baselines",
    "confounding_robust_inference.estimators.constraints",
    "confounding_robust_inference.estimators.kcmc",
    "confounding_robust_inference.estimators.misc"
]
disable_error_code = [
    "attr-defined",
    "name-defined"
]  # due to cvxpy not setting __all__ in __init__.py
